RESOLVED FIXED130934
Subpixel rendering: Simple line layout should not round to integral position while painting.
https://bugs.webkit.org/show_bug.cgi?id=130934
Summary Subpixel rendering: Simple line layout should not round to integral position ...
alan
Reported 2014-03-29 13:52:55 PDT
It could push content off by a device pixel compared to when RenderLayer is injected and hides the subpixel position.
Attachments
Patch (5.43 KB, patch)
2014-03-29 14:03 PDT, alan
simon.fraser: review+
alan
Comment 1 2014-03-29 14:03:39 PDT
Simon Fraser (smfr)
Comment 2 2014-03-29 14:05:12 PDT
Comment on attachment 228117 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=228117&action=review > Source/WebCore/ChangeLog:17 > + Without RenderLayer: > + Renderer's layout position (10.5px, 10.5px) -> rounded and painted at (11px, 11px) > + > + With RenderLayer: > + Rendere's layout position (10.5px, 10.5px) -> RenderLayer position (10.5px, 10.5px) -> > + renderer's relative pos (0px, 0px) -> rounded and painted at (0px, 0p) which > + translates to (10.5px, 10.5px) (vs. (11px, 11px) I don't think it's necessary to include the math in the changelog. If you want to preserve this info for the future, put it in the bugzilla bug.
alan
Comment 3 2014-03-29 15:22:06 PDT
Without RenderLayer: Renderer's layout position (10.5px, 10.5px) -> rounded and painted at (11px, 11px) With RenderLayer: Rendere's layout position (10.5px, 10.5px) -> RenderLayer position (10.5px, 10.5px) -> renderer's relative pos (0px, 0px) -> rounded and painted at (0px, 0p) which translates to (10.5px, 10.5px) (vs. (11px, 11px)
alan
Comment 4 2014-03-29 15:37:10 PDT
Note You need to log in before you can comment on or make changes to this bug.