Subpixel rendering: Simple line layout should not round to integral position while painting. https://bugs.webkit.org/show_bug.cgi?id=130934

Reviewed by Simon Fraser.

Remove rounding to integral position. When RenderLayer is injected and hides subpixel positions,
integral rounding produces different paint position.

Source/WebCore:

Test: fast/flexbox/hidpi-simple-line-layout-with-flexbox-and-transition.html

* rendering/SimpleLineLayoutFunctions.cpp:
(WebCore::SimpleLineLayout::paintFlow):

LayoutTests:

* fast/flexbox/hidpi-simple-line-layout-with-flexbox-and-transition-expected.html: Added.
* fast/flexbox/hidpi-simple-line-layout-with-flexbox-and-transition.html: Added.

Canonical link: https://commits.webkit.org/148972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166456 268f45cc-cd09-0410-ab3c-d52691b4dbfc